# robyn-prisma-template

./: .dockerignore  .gitignore  README.md  dev.db  pyproject.toml
app/: __init__.py
