[project]
name = "app"                        # Required
version = "0.0.1"                   # Required
description = "A sample Python App" # Optional
readme = "README.md"                # Optional
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }

authors = [
    { name = "Sam Hoang", email = "samhv.ict@gmail.com" }, # Optional
]

maintainers = [
    { name = "Sam Hoang", email = "samhv.ict@gmail.com" }, # Optional
]
classifiers = [ # Optional
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["robyn", 'prisma']

[project.optional-dependencies] # Optional
dev = ["check-manifest"]
test = ["coverage"]

[project.scripts] # Optional
sample = "sample:main"

# # This is configuration specific to the `setuptools` build backend.
# # If you are using a different build backend, you will need to change this.
# [tool.setuptools]
# # If there are data files included in your packages that need to be
# # installed, specify them here.
# package-data = { "sample" = ["*.dat"] }

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
